--- a/css/home_css/home_pagee.css
+++ b/css/home_css/home_pagee.css
@@ -1,14 +1,4 @@
 
-/*                                            اهلا بيك في العالم اهلا بيك في الفوضي                                 */
-
-/* Reset some default styles */
-/* خاص ب الهد الرئيسي  */
-/* body,
-h1,
-p,
-a,
-button 
-*/
 *{ 
 
   margin: 0;
@@ -201,4 +191,59 @@ color: #84c7ae ;
   right: -11px;
   top: -12px;
   scale: 45%;
+}
+
+
+
+
+
+
+.container {
+  max-width: 1536px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+/* 2xl */
+@media (max-width: 1536px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+/* xl */
+@media (max-width: 1280px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+/* lg */
+@media (max-width: 1024px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+/* md */
+@media (max-width: 768px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+/* sm */
+@media (max-width: 640px) {
+  .container {
+    max-width: 475px;
+  }
+}
+
+/* xs */
+@media (max-width: 475px) {
+  .container {
+    width: 100%;
+  }
 }
