--- a/css/home_css/home_pagee.css
+++ b/css/home_css/home_pagee.css
@@ -126,6 +126,9 @@ nav {
   margin-bottom: 150px;
   margin-left: 80px;
   margin-right: 150px;
+  max-width: 100%;
+  height: auto;
+  
 }
 
 .lifestyle {
@@ -206,44 +209,4 @@ color: #84c7ae ;
   padding-right: 0.5rem;
 }
 
-/* 2xl */
-@media (max-width: 1536px) {
-  .container {
-    max-width: 1280px;
-  }
-}
 
-/* xl */
-@media (max-width: 1280px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-/* lg */
-@media (max-width: 1024px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-/* md */
-@media (max-width: 768px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-/* sm */
-@media (max-width: 640px) {
-  .container {
-    max-width: 475px;
-  }
-}
-
-/* xs */
-@media (max-width: 475px) {
-  .container {
-    width: 100%;
-  }
-}
