--- a/css/contact_us.css
+++ b/css/contact_us.css
@@ -13,7 +13,8 @@ body {
     );
 }
 .contact-container {
-  padding-top: 65px;
+  padding-top: 100px;
+  padding-bottom: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
