--- a/css/contact_us.css
+++ b/css/contact_us.css
@@ -106,3 +106,62 @@ body {
     color: red;
     margin-top: 10px;
 }  
+/* Responsive Styles */
+@media (max-width: 1024px) {
+    .contact-form {
+        width: 90%;
+        height: auto;
+        padding: 15px;
+    }
+
+    .contact-header h2 {
+        font-size: 36px;
+        margin-left: 0;
+    }
+
+    .contact-header img {
+        width: 140px;
+        height: 143px;
+        margin-right: 10px;
+    }
+}
+
+@media (max-width: 768px) {
+    .contact-header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .contact-header h2 {
+        font-size: 28px;
+        margin-left: 0;
+    }
+
+    .input,
+    .textinput {
+        width: 90%;
+        margin-left: 5%;
+    }
+
+    .send {
+        margin-left: 60%;
+    }
+}
+
+@media (max-width: 480px) {
+    .contact-header img {
+        width: 100px;
+        height: 103px;
+    }
+
+    .contact-header h2 {
+        font-size: 24px;
+    }
+
+    .send {
+        margin-left: 50%;
+        width: 120px;
+        height: 40px;
+    }
+}
