--- a/css/home_css/home_pagee.css
+++ b/css/home_css/home_pagee.css
@@ -1,12 +1,8 @@
-
-*{ 
-
+* { 
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
 }
-
-
 
 body {
   font-size: 16px;
@@ -15,11 +11,7 @@ body {
   background-color: #ffff;
 }
 
-
-
-
 /* Navigation Styles */
-/* خاص ب البار الي فوق  */
 nav {
   position: fixed;
   top: 0;
@@ -31,8 +23,6 @@ nav {
   border-bottom-right-radius: 60px;
 }
 
-
-
 .navbar-container {
   width: 90%;
   margin: 0 auto;
@@ -41,52 +31,39 @@ nav {
   align-items: center;
 }
 
-
-
-
-.navbar-logo img{
+.navbar-logo img {
   margin-top: 5px;
   margin-right: 10px;
 }
-
-
-
 
 .navbar-links {
   display: flex;
   list-style-type: none;
   top: 0;
-  position:sticky;
+  position: sticky;
   position: relative;
 }
 
-
-
-
 .navbar-links li {
-  margin-right:-10px;
+  margin-right: -10px;
 }
 
-
-
 .navbar-links a {
-
   text-decoration: none;
   color: #d9dab5;
   font-size: 20px;
   padding: 5px 0;
-  font-weight: 400px;
+  font-weight: 400;
   font-family: ABeeZee;
   margin-right: 35px;
 }
 
 .navbar-links a:hover {
-  color:#ffff ;
+  color: #ffff;
   transition: 0.5s;
 }
 
-/* Reduce border thickness and styling for search input */
-/* خاصة ب زرار السرش  */
+/* Search Button Styles */
 .search {
   padding: 8px;
   font-size: 16px;
@@ -96,22 +73,18 @@ nav {
   transition: border-color 0.3s;
   width: 400px;
   margin-right: 100px;
-  
 }
 
-
-.gamal{
+.gamal {
   border-radius: 30px;
   background: none;
   border: none;
 }
 
-
 /* Top Image Section */
-/* خاصة ب الصوره الاساسية */
 .top-img {
   position: relative;
-  background-image: url("../../img/home_img/bac.jpg"); /* Replace with the actual image */
+  background-image: url("../../img/home_img/bac.jpg");
   background-size: 500px 500px;
   background-position: right;
   height: 543px;
@@ -128,7 +101,6 @@ nav {
   margin-right: 150px;
   max-width: 100%;
   height: auto;
-  
 }
 
 .lifestyle {
@@ -163,10 +135,11 @@ nav {
   font-family: ABeeZee;
   margin: 10px 0;
   color: #8b8b8b;
-  margin-right:290px;
+  margin-right: 290px;
   margin-top: 30px;
 }
-/* خاص بالازرار */
+
+/* Button Styles */
 .btn {
   background: none;
   border: none;
@@ -180,26 +153,19 @@ nav {
   margin-left: 100px;
   margin-top: 20px;
   text-decoration: none;
-  
 }
 
-#transform-btn{
-text-decoration: none;
-color: #84c7ae ;
+#transform-btn {
+  text-decoration: none;
+  color: #84c7ae;
 }
 
-
-#profile_icon{
+#profile_icon {
   position: absolute;
   right: -11px;
   top: -12px;
   scale: 45%;
 }
-
-
-
-
-
 
 .container {
   max-width: 1536px;
@@ -209,4 +175,63 @@ color: #84c7ae ;
   padding-right: 0.5rem;
 }
 
+/* Responsive Design */
+@media (max-width: 1200px) {
+  .navbar-links a {
+    font-size: 18px;
+    margin-right: 20px;
+  }
 
+  .search {
+    width: 300px;
+    margin-right: 50px;
+  }
+
+  .top-img {
+    height: 400px;
+    padding: 15px;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-links {
+    flex-direction: column;
+    margin-top: 10px;
+  }
+
+  .navbar-links a {
+    font-size: 16px;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+  .search {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .top-img {
+    height: 300px;
+    margin: 50px 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar-links a {
+    font-size: 14px;
+  }
+
+  .top-img {
+    height: 200px;
+    margin: 20px 5px;
+  }
+
+  .search {
+    width: 100%;
+  }
+}
