--- a/css/register.css
+++ b/css/register.css
@@ -124,3 +124,93 @@ input
   color: red;
   margin-top: 10px;
 }  
+/* Responsive Styles */
+@media (max-width: 1024px) {
+  .container {
+    flex-direction: column; /* جعل العناصر عمودية عند الشاشات المتوسطة */
+    align-items: center;
+  }
+
+  .formBox {
+    width: 500px;
+    height: auto;
+    margin-top: 50px;
+  }
+
+  input {
+    width: 90%;
+    margin: 10px auto;
+    display: block;
+  }
+
+  .Register {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .formBox {
+    width: 90%;
+    height: auto;
+  }
+
+  .infoBox {
+    width: 80%;
+    height: auto;
+    margin-top: 20px;
+  }
+
+  .pargraph {
+    font-size: 20px;
+  }
+
+  input {
+    width: 100%;
+  }
+
+  .Register {
+    font-size: 18px;
+    width: 150px;
+    height: 40px;
+  }
+}
+
+@media (max-width: 480px) {
+  .header {
+    font-size: 18px;
+  }
+
+  .caption {
+    font-size: 16px;
+  }
+
+  .pargraph {
+    font-size: 16px;
+    width: 90%;
+  }
+
+  input {
+    width: 100%;
+    font-size: 16px;
+  }
+
+  .Register {
+    width: 140px;
+    height: 38px;
+    font-size: 16px;
+  }
+
+  .forget {
+    padding-left: 0;
+    text-align: center;
+    display: block;
+    margin-top: 10px;
+  }
+
+  .img {
+    left: 0;
+    top: 0;
+    scale: 50%;
+  }
+}
